# emmeffcee-api

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
docs/: CONTRIBUTING.md
src/: main.rs
